# visual-verge

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  query_engine.py
data/: basic_data.json
frontend/: package-lock.json
frontend/src/app/: app.component.css  app.component.ts  product-location.ts  products.service.ts  routes.ts
frontend/src/app/details/: details.component.ts
frontend/src/app/nav-bar/: nav-bar.component.ts
frontend/src/app/product-location/: product-location.component.ts
frontend/visualverge/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/visualverge/src/: index.html
frontend/visualverge/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
frontend/visualverge/src/app/components/search/: search.component.css  search.component.html  search.component.ts
frontend/visualverge/src/app/services/: search.service.ts
frontend/visualverge/src/app/types/: search.types.ts
frontend/visualverge/src/environments/: environment.development.ts
pipelines/: data_importer.py  pyproject.toml
