[tool.poetry]
name = "pipelines"
version = "0.0.1"
description = "Pipelines to provide data to the vectorized db"
authors = ["mhmb"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
torch = {version = "^2.5.1+cu118", source = "pytorch"}
torchvision = {version = "^0.20.1+cu118", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu118", source = "pytorch"}
transformers = "^4.46.2"
qdrant-client = "^1.12.1"
pysocks = "^1.7.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
